fix: some alignment and moved index to main folder

--- a/css/home.css
+++ b/css/home.css
@@ -56,3 +56,9 @@
   display: flex;
   justify-content: center;
 }
+
+@media only screen and (max-width: 1100px) {
+  .category--image:nth-of-type(4) {
+    grid-column: 2/3;
+  }
+}
